fix ingredient search alignment on add recipe, html_safe for show page

--- a/app/assets/stylesheets/recipes.scss
+++ b/app/assets/stylesheets/recipes.scss
@@ -9,6 +9,10 @@
   margin-bottom: 1em;
 }
 
+#initial_select {
+  width: 90px;
+}
+
 .header {
   display: none;
 }
